# soundiboard

./: README.md  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: deploy.yaml
api/: Cargo.toml  Dockerfile  sqlx-data.json
api/migrations/: 20220304221427_create-sounds.down.sql  20220304221427_create-sounds.up.sql  20220306181808_create_users.up.sql
api/src/: main.rs
app/: Dockerfile  package-lock.json  package.json
app/src/: app.html  hooks.ts  service-worker.ts
app/src/lib/: Loader.svelte  Navbar.svelte  auth.ts
app/src/routes/: __layout.svelte  index.svelte  index.ts  login.svelte  password-reset.svelte  signup.svelte
app/src/routes/config/: [name].svelte  index.svelte  new.svelte
app/static/: manifest.json
kube/: api.yaml  app.yaml  db.yaml  namespace.yaml
src/: service-worker.ts
src/routes/: index.svelte
